--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,61 @@
-.App {
-  text-align: center;
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300&display=swap');
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body {
+  background-color: #11998e;
+  font-family: 'Noto Sans JP', sans-serif;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.main {
+  position: absolute;
+  left: 50%;
+  top: 30%;
+  transform: translate(-50%, -50%);
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.todo {
+  width: 750px;
+  box-shadow: 5px 5px 2px 0 rgba(0, 0, 0, 0.2)
 }
 
-.App-link {
-  color: #61dafb;
+.todo p {
+  font-size: 19px;
+  padding: 10px 8px;
+  border-radius: 2px;
+  background-color: #fff1e6;
+  width: 100%;
+  border-bottom: 0.5px solid #cad2c5;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.form {
+  padding: 15px 0 0;
+  margin-bottom: 10px;
+  width: 100%;
+}
+
+.form__field {
+  font-family: inherit;
+  width: 100%;
+  border: 0;
+  border-bottom: 2px solid #9b9b9b;
+  outline: 0;
+  font-size: 1.3rem;
+  color: #fff;
+  background: transparent;
+  padding: 7px 0;
+}
+
+::placeholder {
+  color: #fff;
+}
+
+.icon {
+  position: absolute;
+  right: 10px;
+  cursor: pointer;
 }
